fix(translations): reword some strings for correct plurality

--- a/translations/assets/spectrum/lang/en_us.json
+++ b/translations/assets/spectrum/lang/en_us.json
@@ -15,7 +15,7 @@
     "spectrum.tip.cycle_paintings": "Use %s on a %s while holding another one to cycle through the images",
     "spectrum.tip.construction_wands": "Use %s to build structures quicker",
     "spectrum.tip.small_nether_portals": "Nether portals can be smaller than usual, such as 1x2",
-    "spectrum.tip.dismount_mobs": "Use %s while holding %s to dismount mobs from a %s or %s",
+    "spectrum.tip.dismount_mobs": "Use %s while holding %s to dismount mobs from %s and %s",
     "spectrum.tip.spectrum_client": "This server has a custom client: %s with 21x higher render distance and 10x higher FPS",
     "spectrum.tip.opening_double_doors": "%s will open together with another one if they're placed next to each other",
     "spectrum.tip.easy_elytra_takeoff": "Use %s with a %s in hand while wearing an %s or a %s to take off. No %s spam needed!",
@@ -24,7 +24,7 @@
     "spectrum.tip.arrows_light_fire": "Lit arrows will light a fire when they land",
     "spectrum.tip.hang_glider_before_elytra": "Craft a %s to fly before you get an %s",
     "spectrum.tip.claim_creation": "Protect your build by crafting a %s",
-    "spectrum.tip.claim_customisation": "Customise how your land claim works by using a %s",
+    "spectrum.tip.claim_customisation": "Customise how your land claim works by using %s",
     "spectrum.tip.transfer_enchantments": "Transfer an enchantment from an item to a %s with a %s",
     "spectrum.tip.grindstone_sharpening": "Hold %s and use %s on a %s while holding a tool to temporarily sharpen it",
     "spectrum.tip.highspeed_rail": "Place %s on %s to travel at high speeds",
