refactor(spectrum): generate translation master file from tips.json

--- a/translations/assets/spectrum/lang/en_us.json
+++ b/translations/assets/spectrum/lang/en_us.json
@@ -1,48 +1,87 @@
 {
-    "spectrum.item.statue": "Statue",
-    "spectrum.item.torch_plural": "Torches",
-    "spectrum.item.construction_wand_plural": "Construction Wands",
-    "spectrum.item.door_plural": "Doors",
-    "spectrum.item.anchor_augment_plural": "Anchor Augments",
-    "spectrum.mod.polyfactory": "PolyFactory",
-    "spectrum.tip.anvil_repair": "You can repair a %s by using an %s on it with %s",
-    "spectrum.tip.anvil_damage": "You can damage an %s by using an %s on it with %s",
-    "spectrum.tip.pose_armor_stands": "Pose an %s or a %s by holding %s and using %s on them",
-    "spectrum.tip.disble_spawners": "Surround a %s with five %s to disable it",
-    "spectrum.tip.sponge_absorbtion_radius": "A %s has a bigger absorption radius when next to another one",
-    "spectrum.tip.bottle_your_xp": "Use a %s while holding %s to bottle your XP at 90% efficiency",
-    "spectrum.tip.crying_obsidian_portal": "%s is also a valid block for building a nether portal",
-    "spectrum.tip.cycle_paintings": "Use %s on a %s while holding another one to cycle through the images",
-    "spectrum.tip.construction_wands": "Use %s to build structures quicker",
-    "spectrum.tip.small_nether_portals": "Nether portals can be smaller than usual, such as 1x2",
-    "spectrum.tip.dismount_mobs": "Use %s while holding %s to dismount mobs from %s and %s",
-    "spectrum.tip.spectrum_client": "This server has a custom client: %s with 21x higher render distance and 10x higher FPS",
-    "spectrum.tip.opening_double_doors": "%s will open together with another one if they're placed next to each other",
-    "spectrum.tip.easy_elytra_takeoff": "Use %s with a %s in hand while wearing an %s or a %s to take off. No %s spam needed!",
-    "spectrum.tip.enchantments_wiki": "If you find an enchantment you don't recognise, look it up in the %s or %s",
-    "spectrum.tip.extract_poison": "Use %s on a spider with a %s in your hand to extract its poison",
-    "spectrum.tip.arrows_light_fire": "Lit arrows will light a fire when they land",
-    "spectrum.tip.hang_glider_before_elytra": "Craft a %s to fly before you get an %s",
-    "spectrum.tip.claim_creation": "Protect your build by crafting a %s",
-    "spectrum.tip.claim_customisation": "Customise how your land claim works by using %s",
-    "spectrum.tip.transfer_enchantments": "Transfer an enchantment from an item to a %s with a %s",
-    "spectrum.tip.grindstone_sharpening": "Hold %s and use %s on a %s while holding a tool to temporarily sharpen it",
-    "spectrum.tip.highspeed_rail": "Place %s on %s to travel at high speeds",
-    "spectrum.tip.ice_prevents_crop_growth": "Place %s under crops to prevent them from growing",
-    "spectrum.tip.minecart_linking": "Use %s with a %s on a %s to start creating a train",
-    "spectrum.tip.mastercutter_docs": "The %s is a lot more powerful than usual. Check %s for all the details",
-    "spectrum.tip.no_hostiles_around_campfire": "Hostile mobs will not spawn around a %s and will catch on fire if they get near",
-    "spectrum.tip.persistent_parrots": "Parrots prefer to stay on your shoulder. To get them off, press %s while holding %s",
-    "spectrum.tip.polydecorations": "Craft unique decorations with %s",
-    "spectrum.tip.polyfactory": "Automate crafting and processing by building a factory with %s",
-    "spectrum.tip.random_bonemeal_flowers": "Using %s on a %s has the chance of spawning all flower types",
-    "spectrum.tip.right_click_harvest": "Use %s on a grown crop to harvest and replant it with a single click",
-    "spectrum.tip.skippy_ender_pearls": "A thrown %s will skip on the water surface before sinking",
-    "spectrum.tip.spellbound_weapons": "Create magic weapons with %s",
-    "spectrum.tip.televator": "Craft a %s and use %s/%s to teleport between floors of your base",
-    "spectrum.tip.thoroughfabric": "As you walk on a %s, it will eventually wear down and turn into %s, then %s",
-    "spectrum.tip.ping": "Use %s to point out a location to nearby players",
-    "spectrum.tip.polydex_search": "Use %s to search for items and recipes, including from server-side mods",
-    "spectrum.pack_name": "Spectrum",
-    "spectrum.translations.custom": "Custom translation keys for Spectrum"
+  "tip.spectrum.translation_help": "See an issue in your language? Contribute translations at the %s",
+  "tip.spectrum.translation_help.servers_repository": "Server's repository",
+  "tip.spectrum.polydex_search": "Use %s to search for items and recipes, including from mods",
+  "tip.spectrum.anvil_repair": "You can repair a %s by using an %s on it with %s",
+  "block.spectrum.damaged_anvil": "Damaged Anvil",
+  "item.spectrum.iron_ingot": "Iron Ingot",
+  "tip.spectrum.anvil_damage": "You can damage an %s by using an %s on it with %s",
+  "block.spectrum.anvil": "Anvil",
+  "block.spectrum.obsidian": "Obsidian",
+  "tip.spectrum.pose_armor_stands": "Pose an %s or a %s by holding %s and using %s on them",
+  "item.spectrum.armor_stand": "Armor Stand",
+  "item.spectrum.statue": "Statue",
+  "item.spectrum.flint": "Flint",
+  "tip.spectrum.disable_spawners": "Surround a %s with five %s to disable it",
+  "tip.spectrum.disable_spawners.torches": "Torches",
+  "tip.spectrum.sponge_absorption_radius": "A %s has a bigger absorption radius when next to another one",
+  "block.spectrum.sponge": "Sponge",
+  "tip.spectrum.bottle_your_xp": "Use a %s while holding %s to bottle your XP at 90% efficiency",
+  "item.spectrum.glass_bottle": "Glass Bottle",
+  "tip.spectrum.crying_obsidian_portal": "%s is also a valid block for building a nether portal",
+  "block.spectrum.crying_obsidian": "Crying Obsidian",
+  "tip.spectrum.cycle_paintings": "Use %s on a %s while holding another one to cycle through the images",
+  "item.spectrum.painting": "Painting",
+  "tip.spectrum.construction_wands": "Use %s to build structures quicker",
+  "tip.spectrum.construction_wands.construction_wands": "Construction Wands",
+  "tip.spectrum.small_nether_portals": "Nether portals can be smaller than usual, such as 1x2",
+  "tip.spectrum.dismount_mobs": "Use %s while holding %s to dismount mobs from %s and %s",
+  "tip.spectrum.dismount_mobs.boats": "boats",
+  "tip.spectrum.dismount_mobs.minecarts": "minecarts",
+  "tip.spectrum.spectrum_client": "This server has a custom client: %s with 21x higher render distance and 10x higher FPS",
+  "string.spectrum.pack_name": "Spectrum",
+  "tip.spectrum.opening_double_doors": "%s will open together with another one if they're placed next to each other",
+  "tip.spectrum.opening_double_doors.doors": "Doors",
+  "tip.spectrum.easy_elytra_takeoff": "Use %s with a %s in hand while wearing an %s to take off. No %s spam needed!",
+  "item.spectrum.firework_rocket": "Firework Rocket",
+  "item.spectrum.elytra": "Elytra",
+  "tip.spectrum.enchantments_wiki": "If you find an enchantment you don't recognise, look it up in the %s or %s",
+  "tip.spectrum.enchantments_wiki.minecaft_wiki": "Minecraft Wiki",
+  "tip.spectrum.enchantments_wiki.enchantments_encore_table": "Enchantments Encore table",
+  "tip.spectrum.extract_poison": "Use %s on a spider with a %s in your hand to extract its poison",
+  "tip.spectrum.arrows_light_fire": "Lit %s will light a fire when they land",
+  "tip.spectrum.arrows_light_fire.arrows": "arrows",
+  "tip.spectrum.hang_glider_before_elytra": "Craft a %s to fly before you get an %s",
+  "item.spectrum.hang_glider": "Hang Glider",
+  "tip.spectrum.claim_creation": "Protect your build by crafting a %s",
+  "block.spectrum.makeshift_claim_anchor": "Makeshift Claim Anchor",
+  "tip.spectrum.claim_customisation": "Customise how your land claim works by using %s",
+  "tip.spectrum.claim_customisation.anchor_augments": "Anchor Augments",
+  "tip.spectrum.transfer_enchantments": "Transfer an enchantment from an item to a %s with a %s",
+  "item.spectrum.book": "Book",
+  "block.spectrum.grindstone": "Grindstone",
+  "tip.spectrum.grindstone_sharpening": "Hold %s and use %s on a %s while holding a tool to temporarily sharpen it",
+  "tip.spectrum.highspeed_rail": "Place %s on %s to travel at high speeds",
+  "block.spectrum.rail": "Rail",
+  "block.spectrum.gravel": "Gravel",
+  "tip.spectrum.ice_prevents_crop_growth": "Place %s under crops to prevent them from growing",
+  "block.spectrum.ice": "Ice",
+  "tip.spectrum.minecart_linking": "Use %s with a %s on a %s to start creating a train",
+  "block.spectrum.chain": "Chain",
+  "item.spectrum.minecart": "Minecart",
+  "tip.spectrum.mastercutter_docs": "The %s is a lot more powerful than usual. Check %s for all the details",
+  "block.spectrum.stonecutter": "Stonecutter",
+  "tip.spectrum.mastercutter_docs.the_mastercutter_docs": "the MasterCutter docs",
+  "tip.spectrum.no_hostiles_around_campfire": "Hostile mobs will not spawn around a %s and will catch on fire if they get near",
+  "block.spectrum.campfire": "Campfire",
+  "tip.spectrum.persistent_parrots": "Parrots prefer to stay on your shoulder. To get them off, press %s while holding %s",
+  "tip.spectrum.polydecorations": "Craft unique decorations with %s",
+  "tip.spectrum.polydecorations.items_and_blocks": "PolyDecorations items and blocks",
+  "tip.spectrum.polyfactory": "Automate crafting and processing by building a factory with %s",
+  "mod.spectrum.polyfactory": "PolyFactory",
+  "tip.spectrum.random_bonemeal_flowers": "Using %s on a %s has the chance of spawning all flower types",
+  "item.spectrum.bone_meal": "Bone Meal",
+  "block.spectrum.grass_block": "Grass Block",
+  "tip.spectrum.right_click_harvest": "Use %s on a grown crop to harvest and replant it with a single click",
+  "tip.spectrum.skippy_ender_pearls": "A thrown %s will skip on the water surface before sinking",
+  "item.spectrum.ender_pearl": "Ender Pearl",
+  "tip.spectrum.spellbound_weapons": "Create magic weapons with %s",
+  "mod.spectrum.spellbound_weapons": "Spellbound Weapons",
+  "tip.spectrum.televator": "Craft a %s and use %s/%s to teleport between floors of your base",
+  "block.spectrum.televator": "Televator",
+  "tip.spectrum.thoroughfabric": "As you walk on %s, it will eventually wear down and turn into %s, then %s",
+  "block.spectrum.grass": "Grass",
+  "block.spectrum.dirt_path": "Dirt Path",
+  "block.spectrum.cobblestone_slab": "Cobblestone Slab",
+  "tip.spectrum.ping": "Use %s to point out a location to nearby players"
 }
