--- a/translations/assets/spectrum/lang/et_ee.json
+++ b/translations/assets/spectrum/lang/et_ee.json
@@ -1,48 +1,87 @@
 {
-    "spectrum.item.statue": "Kuju",
-    "spectrum.item.torch_plural": "Tõrvikud",
-    "spectrum.item.construction_wand_plural": "Ehituse võlukepid",
-    "spectrum.item.door_plural": "Uksed",
-    "spectrum.item.anchor_augment_plural": "Ankru täiendused",
-    "spectrum.mod.polyfactory": "PolyFactory",
-    "spectrum.tip.anvil_repair": "Saad %s parandada, kasutades selleks %s koos %s‑ga",
-    "spectrum.tip.anvil_damage": "Saad %s kahjustada, kasutades selleks %s koos %s‑ga",
-    "spectrum.tip.pose_armor_stands": "Muuda %s või %s poosi, hoides %s ja kasutades seda %s peal",
-    "spectrum.tip.disble_spawners": "Ümba %s viie %s‑ga, et see välja lülitada",
-    "spectrum.tip.sponge_absorbtion_radius": "Käsn omab suuremat imemisraadiust, kui see on teise käsna kõrval",
-    "spectrum.tip.bottle_your_xp": "Kasuta %s, hoides samal ajal %s, et pudelisse talletada oma XP 90% efektiivsusega",
-    "spectrum.tip.crying_obsidian_portal": "%s on samuti sobiv plokk Netheri portaaliks ehitamiseks",
-    "spectrum.tip.cycle_paintings": "Kasuta %s %s peal, hoides teist %s, et vahetada pilte",
-    "spectrum.tip.construction_wands": "Kasuta %s, et struktuure kiiremini ehitada",
-    "spectrum.tip.small_nether_portals": "Netheri portaalid võivad olla väiksemad kui tavaliselt, näiteks 1×2",
-    "spectrum.tip.dismount_mobs": "Kasuta %s, hoides samal ajal %s, et sundida mobid %s või %s pealt maha astuma",
-    "spectrum.tip.spectrum_client": "Sellel serveril on kohandatud klient %s, millel on 21× suurem renderdistants ja 10× kõrgem kaadrisagedus",
-    "spectrum.tip.opening_double_doors": "%s avab koos teise uksega, kui need on kõrvuti paigaldatud",
-    "spectrum.tip.easy_elytra_takeoff": "Kasuta %s koos %s käes, kandes %s või %s, et lennata – pole vaja spammi %s‑ga!",
-    "spectrum.tip.enchantments_wiki": "Kui leiad tundmatu võluriide, otsi infot %s või %s lehelt",
-    "spectrum.tip.extract_poison": "Kasuta %s ämbliku peal, hoides samal ajal %s, et ekstraktida selle mürki",
-    "spectrum.tip.arrows_light_fire": "Süttivad nooled süütavad maandumisel tulekahju",
-    "spectrum.tip.hang_glider_before_elytra": "Valmista %s, et lennata enne %s saamist",
-    "spectrum.tip.claim_creation": "Kaitse oma ehitist, meisterdades %s",
-    "spectrum.tip.claim_customisation": "Kohanda oma maa nõudeid, kasutades %s",
-    "spectrum.tip.transfer_enchantments": "Viigu võlu esemelt %s‑le, kasutades %s",
-    "spectrum.tip.grindstone_sharpening": "Hoia %s ja kasuta %s %s peal, et ajutiselt tööriista teritada",
-    "spectrum.tip.highspeed_rail": "Aseta %s %s peale, et liikuda suurel kiirusel",
-    "spectrum.tip.ice_prevents_crop_growth": "Aseta %s saagikülvikute alla, et takistada nende kasvu",
-    "spectrum.tip.minecart_linking": "Kasuta %s %s peal, et alustada rongi loomist %s‑ga",
-    "spectrum.tip.mastercutter_docs": "%s on palju võimsam kui tavaliselt. Kõigi detailide jaoks vaata %s",
-    "spectrum.tip.no_hostiles_around_campfire": "Vaenulikud mobid ei ilmu lõkke ümber ja süttivad, kui lähevad lähedale",
-    "spectrum.tip.persistent_parrots": "Papagoid eelistavad jääda õlale. Et need maha saada, vajuta %s hoides %s",
-    "spectrum.tip.polydecorations": "Valmista unikaalseid dekoratsioone, kasutades %s",
-    "spectrum.tip.polyfactory": "Automatiseeri meisterdamine ja töötlemine, ehitades tehase %s‑ga",
-    "spectrum.tip.random_bonemeal_flowers": "%s kasutamine %s peal võib kasvatada kõiki lilleliike",
-    "spectrum.tip.right_click_harvest": "Kasuta %s küpse saagi peal, et ühe klõpsuga korjata ja uuesti istutada",
-    "spectrum.tip.skippy_ender_pearls": "Visatud %s põrkub veepinnal enne põhja vajumist",
-    "spectrum.tip.spellbound_weapons": "Loo maagilisi relvi, kasutades %s",
-    "spectrum.tip.televator": "Valmista %s ja kasuta %s/%s, et teleportida baasipõrandate vahel",
-    "spectrum.tip.thoroughfabric": "Kui kõnnid %s peal, kulub see lõpuks ära ja muutub %s‑ks, seejärel %s‑ks",
-    "spectrum.tip.ping": "Kasuta %s, et näidata asukohta lähedalviibivatele mängijatele",
-    "spectrum.tip.polydex_search": "Kasuta %s, et otsida esemeid ja retsepte, sh serveripoolsetest modifikatsioonidest",
-    "spectrum.pack_name": "Spectrum",
-    "spectrum.translations.custom": "Spectrum'i kohandatud tõlkevõtmed"
+  "tip.spectrum.translation_help": "See an issue in your language? Contribute translations at the %s",
+  "tip.spectrum.translation_help.servers_repository": "Server's repository",
+  "tip.spectrum.polydex_search": "Kasuta %s, et otsida esemeid ja retsepte, sh serveripoolsetest modifikatsioonidest",
+  "tip.spectrum.anvil_repair": "Saad %s parandada, kasutades selleks %s koos %s‑ga",
+  "block.spectrum.damaged_anvil": "Damaged Anvil",
+  "item.spectrum.iron_ingot": "Iron Ingot",
+  "tip.spectrum.anvil_damage": "Saad %s kahjustada, kasutades selleks %s koos %s‑ga",
+  "block.spectrum.anvil": "Anvil",
+  "block.spectrum.obsidian": "Obsidian",
+  "tip.spectrum.pose_armor_stands": "Muuda %s või %s poosi, hoides %s ja kasutades seda %s peal",
+  "item.spectrum.armor_stand": "Armor Stand",
+  "item.spectrum.statue": "Kuju",
+  "item.spectrum.flint": "Flint",
+  "tip.spectrum.disable_spawners": "Surround a %s with five %s to disable it",
+  "tip.spectrum.disable_spawners.torches": "Torches",
+  "tip.spectrum.sponge_absorption_radius": "A %s has a bigger absorption radius when next to another one",
+  "block.spectrum.sponge": "Sponge",
+  "tip.spectrum.bottle_your_xp": "Kasuta %s, hoides samal ajal %s, et pudelisse talletada oma XP 90% efektiivsusega",
+  "item.spectrum.glass_bottle": "Glass Bottle",
+  "tip.spectrum.crying_obsidian_portal": "%s on samuti sobiv plokk Netheri portaaliks ehitamiseks",
+  "block.spectrum.crying_obsidian": "Crying Obsidian",
+  "tip.spectrum.cycle_paintings": "Kasuta %s %s peal, hoides teist %s, et vahetada pilte",
+  "item.spectrum.painting": "Painting",
+  "tip.spectrum.construction_wands": "Kasuta %s, et struktuure kiiremini ehitada",
+  "tip.spectrum.construction_wands.construction_wands": "Construction Wands",
+  "tip.spectrum.small_nether_portals": "Netheri portaalid võivad olla väiksemad kui tavaliselt, näiteks 1×2",
+  "tip.spectrum.dismount_mobs": "Kasuta %s, hoides samal ajal %s, et sundida mobid %s või %s pealt maha astuma",
+  "tip.spectrum.dismount_mobs.boats": "boats",
+  "tip.spectrum.dismount_mobs.minecarts": "minecarts",
+  "tip.spectrum.spectrum_client": "Sellel serveril on kohandatud klient %s, millel on 21× suurem renderdistants ja 10× kõrgem kaadrisagedus",
+  "string.spectrum.pack_name": "Spectrum",
+  "tip.spectrum.opening_double_doors": "%s avab koos teise uksega, kui need on kõrvuti paigaldatud",
+  "tip.spectrum.opening_double_doors.doors": "Uksed",
+  "tip.spectrum.easy_elytra_takeoff": "Kasuta %s koos %s käes, kandes %s, et lennata – pole vaja spammi %s‑ga!",
+  "item.spectrum.firework_rocket": "Firework Rocket",
+  "item.spectrum.elytra": "Elytra",
+  "tip.spectrum.enchantments_wiki": "Kui leiad tundmatu võluriide, otsi infot %s või %s lehelt",
+  "tip.spectrum.enchantments_wiki.minecaft_wiki": "Minecraft Wiki",
+  "tip.spectrum.enchantments_wiki.enchantments_encore_table": "Enchantments Encore table",
+  "tip.spectrum.extract_poison": "Kasuta %s ämbliku peal, hoides samal ajal %s, et ekstraktida selle mürki",
+  "tip.spectrum.arrows_light_fire": "Süttivad %s süütavad maandumisel tulekahju",
+  "tip.spectrum.arrows_light_fire.arrows": "nooled",
+  "tip.spectrum.hang_glider_before_elytra": "Valmista %s, et lennata enne %s saamist",
+  "item.spectrum.hang_glider": "Hang Glider",
+  "tip.spectrum.claim_creation": "Kaitse oma ehitist, meisterdades %s",
+  "block.spectrum.makeshift_claim_anchor": "Makeshift Claim Anchor",
+  "tip.spectrum.claim_customisation": "Kohanda oma maa nõudeid, kasutades %s",
+  "tip.spectrum.claim_customisation.anchor_augments": "Anchor Augments",
+  "tip.spectrum.transfer_enchantments": "Viigu võlu esemelt %s‑le, kasutades %s",
+  "item.spectrum.book": "Book",
+  "block.spectrum.grindstone": "Grindstone",
+  "tip.spectrum.grindstone_sharpening": "Hoia %s ja kasuta %s %s peal, et ajutiselt tööriista teritada",
+  "tip.spectrum.highspeed_rail": "Aseta %s %s peale, et liikuda suurel kiirusel",
+  "block.spectrum.rail": "Rail",
+  "block.spectrum.gravel": "Gravel",
+  "tip.spectrum.ice_prevents_crop_growth": "Aseta %s saagikülvikute alla, et takistada nende kasvu",
+  "block.spectrum.ice": "Ice",
+  "tip.spectrum.minecart_linking": "Kasuta %s %s peal, et alustada rongi loomist %s‑ga",
+  "block.spectrum.chain": "Chain",
+  "item.spectrum.minecart": "Minecart",
+  "tip.spectrum.mastercutter_docs": "%s on palju võimsam kui tavaliselt. Kõigi detailide jaoks vaata %s",
+  "block.spectrum.stonecutter": "Stonecutter",
+  "tip.spectrum.mastercutter_docs.the_mastercutter_docs": "the MasterCutter docs",
+  "tip.spectrum.no_hostiles_around_campfire": "Vaenulikud mobid ei ilmu lõkke ümber ja süttivad, kui lähevad lähedale",
+  "block.spectrum.campfire": "Campfire",
+  "tip.spectrum.persistent_parrots": "Papagoid eelistavad jääda õlale. Et need maha saada, vajuta %s hoides %s",
+  "tip.spectrum.polydecorations": "Valmista unikaalseid dekoratsioone, kasutades %s",
+  "tip.spectrum.polydecorations.items_and_blocks": "PolyDecorations items and blocks",
+  "tip.spectrum.polyfactory": "Automatiseeri meisterdamine ja töötlemine, ehitades tehase %s‑ga",
+  "mod.spectrum.polyfactory": "PolyFactory",
+  "tip.spectrum.random_bonemeal_flowers": "%s kasutamine %s peal võib kasvatada kõiki lilleliike",
+  "item.spectrum.bone_meal": "Bone Meal",
+  "block.spectrum.grass_block": "Grass Block",
+  "tip.spectrum.right_click_harvest": "Kasuta %s küpse saagi peal, et ühe klõpsuga korjata ja uuesti istutada",
+  "tip.spectrum.skippy_ender_pearls": "Visatud %s põrkub veepinnal enne põhja vajumist",
+  "item.spectrum.ender_pearl": "Ender Pearl",
+  "tip.spectrum.spellbound_weapons": "Loo maagilisi relvi, kasutades %s",
+  "mod.spectrum.spellbound_weapons": "Spellbound Weapons",
+  "tip.spectrum.televator": "Valmista %s ja kasuta %s/%s, et teleportida baasipõrandate vahel",
+  "block.spectrum.televator": "Televator",
+  "tip.spectrum.thoroughfabric": "Kui kõnnid %s peal, kulub see lõpuks ära ja muutub %s‑ks, seejärel %s‑ks",
+  "block.spectrum.grass": "Grass",
+  "block.spectrum.dirt_path": "Dirt Path",
+  "block.spectrum.cobblestone_slab": "Cobblestone Slab",
+  "tip.spectrum.ping": "Kasuta %s, et näidata asukohta lähedalviibivatele mängijatele"
 }
