--- a/translations/assets/spectrum/lang/ru_ru.json
+++ b/translations/assets/spectrum/lang/ru_ru.json
@@ -1,48 +1,87 @@
 {
-    "spectrum.item.statue": "Статуя",
-    "spectrum.item.torch_plural": "Факелы",
-    "spectrum.item.construction_wand_plural": "Жезлы строительства",
-    "spectrum.item.door_plural": "Двери",
-    "spectrum.item.anchor_augment_plural": "Усилители якоря",
-    "spectrum.mod.polyfactory": "PolyFactory",
-    "spectrum.tip.anvil_repair": "Чтобы починить %s, используйте %s вместе с %s",
-    "spectrum.tip.anvil_damage": "Чтобы повредить %s, используйте %s вместе с %s",
-    "spectrum.tip.pose_armor_stands": "Чтобы изменить позу %s или %s, удерживайте %s и применяйте %s",
-    "spectrum.tip.disble_spawners": "Чтобы отключить %s, окружите его пятью %s",
-    "spectrum.tip.sponge_absorbtion_radius": "Радиус поглощения %s увеличивается, если он стоит рядом с другим",
-    "spectrum.tip.bottle_your_xp": "Используйте %s, удерживая %s, чтобы забутылить опыт с эффективностью 90%",
-    "spectrum.tip.crying_obsidian_portal": "%s также подходит для создания портала в Нижний мир",
-    "spectrum.tip.cycle_paintings": "Чтобы переключать изображения, применяйте %s к %s, удерживая при этом ещё один такой же",
-    "spectrum.tip.construction_wands": "Используйте %s, чтобы быстрее строить конструкции",
-    "spectrum.tip.small_nether_portals": "Порталы в Нижний мир могут быть меньше обычного, например 1×2",
-    "spectrum.tip.dismount_mobs": "Используйте %s, удерживая %s, чтобы снять моба с %s или %s",
-    "spectrum.tip.spectrum_client": "На этом сервере есть клиент %s с в 21 раз большим радиусом прорисовки и в 10 раз более высокой частотой кадров",
-    "spectrum.tip.opening_double_doors": "Если %s установлена рядом с другой дверью, они откроются одновременно",
-    "spectrum.tip.easy_elytra_takeoff": "Используйте %s, удерживая в руке %s и надев %s или %s, чтобы взлететь. Спамить %s больше не нужно!",
-    "spectrum.tip.enchantments_wiki": "Если вы встретите незнакомое зачарование, найдите о нём информацию в %s или %s",
-    "spectrum.tip.extract_poison": "Чтобы извлечь яд, примените %s к пауку, держа в руках %s",
-    "spectrum.tip.arrows_light_fire": "Зажжённые стрелы поджигают блок при приземлении",
-    "spectrum.tip.hang_glider_before_elytra": "Создайте %s, чтобы летать до получения %s",
-    "spectrum.tip.claim_creation": "Защитите свою постройку, создав %s",
-    "spectrum.tip.claim_customisation": "Используйте %s, чтобы настроить работу защиты территории",
-    "spectrum.tip.transfer_enchantments": "Перенесите зачарование с предмета на %s с помощью %s",
-    "spectrum.tip.grindstone_sharpening": "Удерживая %s, применяйте %s к %s, держа в руках инструмент, чтобы временно его заточить",
-    "spectrum.tip.highspeed_rail": "Разместите %s на %s, чтобы передвигаться с высокой скоростью",
-    "spectrum.tip.ice_prevents_crop_growth": "Поместите %s под растения, чтобы они не росли",
-    "spectrum.tip.minecart_linking": "Используйте %s вместе с %s на %s, чтобы начать формировать состав вагонеток",
-    "spectrum.tip.mastercutter_docs": "У %s значительно превышает обычную мощность. Подробности — в %s",
-    "spectrum.tip.no_hostiles_around_campfire": "Враждебные мобы не появляются рядом с %s и загораются, если подходят близко",
-    "spectrum.tip.persistent_parrots": "Попугаи предпочитают сидеть на плече. Чтобы снять их, нажмите %s, удерживая %s",
-    "spectrum.tip.polydecorations": "Создавайте уникальные украшения с помощью %s",
-    "spectrum.tip.polyfactory": "Автоматизируйте крафт и обработку, построив фабрику с %s",
-    "spectrum.tip.random_bonemeal_flowers": "При применении %s к %s есть шанс появления всех видов цветов",
-    "spectrum.tip.right_click_harvest": "Используйте %s на созревшей культуре, чтобы собрать и сразу пересадить её одним кликом",
-    "spectrum.tip.skippy_ender_pearls": "Брошенная %s отскочит по поверхности воды, прежде чем утонуть",
-    "spectrum.tip.spellbound_weapons": "Создавайте магическое оружие с помощью %s",
-    "spectrum.tip.televator": "Создайте %s и используйте %s/%s для телепортации между этажами базы",
-    "spectrum.tip.thoroughfabric": "При ходьбе по %s оно постепенно изнашивается, превращаясь сначала в %s, затем в %s",
-    "spectrum.tip.ping": "Используйте %s, чтобы указать местоположение другим игрокам поблизости",
-    "spectrum.tip.polydex_search": "Используйте %s для поиска предметов и рецептов, включая контент серверных модов",
-    "spectrum.pack_name": "Spectrum",
-    "spectrum.translations.custom": "Пользовательские ключи перевода для Spectrum"
+  "tip.spectrum.translation_help": "See an issue in your language? Contribute translations at the %s",
+  "tip.spectrum.translation_help.servers_repository": "Server's repository",
+  "tip.spectrum.polydex_search": "Используйте %s для поиска предметов и рецептов, включая контент серверных модов",
+  "tip.spectrum.anvil_repair": "Чтобы починить %s, используйте %s вместе с %s",
+  "block.spectrum.damaged_anvil": "Damaged Anvil",
+  "item.spectrum.iron_ingot": "Iron Ingot",
+  "tip.spectrum.anvil_damage": "Чтобы повредить %s, используйте %s вместе с %s",
+  "block.spectrum.anvil": "Anvil",
+  "block.spectrum.obsidian": "Obsidian",
+  "tip.spectrum.pose_armor_stands": "Чтобы изменить позу %s или %s, удерживайте %s и применяйте %s",
+  "item.spectrum.armor_stand": "Armor Stand",
+  "item.spectrum.statue": "Статуя",
+  "item.spectrum.flint": "Flint",
+  "tip.spectrum.disable_spawners": "Surround a %s with five %s to disable it",
+  "tip.spectrum.disable_spawners.torches": "Torches",
+  "tip.spectrum.sponge_absorption_radius": "A %s has a bigger absorption radius when next to another one",
+  "block.spectrum.sponge": "Sponge",
+  "tip.spectrum.bottle_your_xp": "Используйте %s, удерживая %s, чтобы забутылить опыт с эффективностью 90%",
+  "item.spectrum.glass_bottle": "Glass Bottle",
+  "tip.spectrum.crying_obsidian_portal": "%s также подходит для создания портала в Нижний мир",
+  "block.spectrum.crying_obsidian": "Crying Obsidian",
+  "tip.spectrum.cycle_paintings": "Чтобы переключать изображения, применяйте %s к %s, удерживая при этом ещё один такой же",
+  "item.spectrum.painting": "Painting",
+  "tip.spectrum.construction_wands": "Используйте %s, чтобы быстрее строить конструкции",
+  "tip.spectrum.construction_wands.construction_wands": "Construction Wands",
+  "tip.spectrum.small_nether_portals": "Порталы в Нижний мир могут быть меньше обычного, например 1×2",
+  "tip.spectrum.dismount_mobs": "Используйте %s, удерживая %s, чтобы снять моба с %s или %s",
+  "tip.spectrum.dismount_mobs.boats": "boats",
+  "tip.spectrum.dismount_mobs.minecarts": "minecarts",
+  "tip.spectrum.spectrum_client": "На этом сервере есть клиент %s с в 21 раз большим радиусом прорисовки и в 10 раз более высокой частотой кадров",
+  "string.spectrum.pack_name": "Spectrum",
+  "tip.spectrum.opening_double_doors": "Если %s установлена рядом с другой дверью, они откроются одновременно",
+  "tip.spectrum.opening_double_doors.doors": "Doors",
+  "tip.spectrum.easy_elytra_takeoff": "Используйте %s, удерживая в руке %s и надев %s или %s, чтобы взлететь. Спамить %s больше не нужно!",
+  "item.spectrum.firework_rocket": "Firework Rocket",
+  "item.spectrum.elytra": "Elytra",
+  "tip.spectrum.enchantments_wiki": "Если вы встретите незнакомое зачарование, найдите о нём информацию в %s или %s",
+  "tip.spectrum.enchantments_wiki.minecaft_wiki": "Minecraft Wiki",
+  "tip.spectrum.enchantments_wiki.enchantments_encore_table": "Enchantments Encore table",
+  "tip.spectrum.extract_poison": "Чтобы извлечь яд, примените %s к пауку, держа в руках %s",
+  "tip.spectrum.arrows_light_fire": "Зажжённые %s поджигают блок при приземлении",
+  "tip.spectrum.arrows_light_fire.arrows": "стрелы",
+  "tip.spectrum.hang_glider_before_elytra": "Создайте %s, чтобы летать до получения %s",
+  "item.spectrum.hang_glider": "Hang Glider",
+  "tip.spectrum.claim_creation": "Защитите свою постройку, создав %s",
+  "block.spectrum.makeshift_claim_anchor": "Makeshift Claim Anchor",
+  "tip.spectrum.claim_customisation": "Используйте %s, чтобы настроить работу защиты территории",
+  "tip.spectrum.claim_customisation.anchor_augments": "Anchor Augments",
+  "tip.spectrum.transfer_enchantments": "Перенесите зачарование с предмета на %s с помощью %s",
+  "item.spectrum.book": "Book",
+  "block.spectrum.grindstone": "Grindstone",
+  "tip.spectrum.grindstone_sharpening": "Удерживая %s, применяйте %s к %s, держа в руках инструмент, чтобы временно его заточить",
+  "tip.spectrum.highspeed_rail": "Разместите %s на %s, чтобы передвигаться с высокой скоростью",
+  "block.spectrum.rail": "Rail",
+  "block.spectrum.gravel": "Gravel",
+  "tip.spectrum.ice_prevents_crop_growth": "Поместите %s под растения, чтобы они не росли",
+  "block.spectrum.ice": "Ice",
+  "tip.spectrum.minecart_linking": "Используйте %s вместе с %s на %s, чтобы начать формировать состав вагонеток",
+  "block.spectrum.chain": "Chain",
+  "item.spectrum.minecart": "Minecart",
+  "tip.spectrum.mastercutter_docs": "У %s значительно превышает обычную мощность. Подробности — в %s",
+  "block.spectrum.stonecutter": "Stonecutter",
+  "tip.spectrum.mastercutter_docs.the_mastercutter_docs": "the MasterCutter docs",
+  "tip.spectrum.no_hostiles_around_campfire": "Враждебные мобы не появляются рядом с %s и загораются, если подходят близко",
+  "block.spectrum.campfire": "Campfire",
+  "tip.spectrum.persistent_parrots": "Попугаи предпочитают сидеть на плече. Чтобы снять их, нажмите %s, удерживая %s",
+  "tip.spectrum.polydecorations": "Создавайте уникальные украшения с помощью %s",
+  "tip.spectrum.polydecorations.items_and_blocks": "PolyDecorations items and blocks",
+  "tip.spectrum.polyfactory": "Автоматизируйте крафт и обработку, построив фабрику с %s",
+  "mod.spectrum.polyfactory": "PolyFactory",
+  "tip.spectrum.random_bonemeal_flowers": "При применении %s к %s есть шанс появления всех видов цветов",
+  "item.spectrum.bone_meal": "Bone Meal",
+  "block.spectrum.grass_block": "Grass Block",
+  "tip.spectrum.right_click_harvest": "Используйте %s на созревшей культуре, чтобы собрать и сразу пересадить её одним кликом",
+  "tip.spectrum.skippy_ender_pearls": "Брошенная %s отскочит по поверхности воды, прежде чем утонуть",
+  "item.spectrum.ender_pearl": "Ender Pearl",
+  "tip.spectrum.spellbound_weapons": "Создавайте магическое оружие с помощью %s",
+  "mod.spectrum.spellbound_weapons": "Spellbound Weapons",
+  "tip.spectrum.televator": "Создайте %s и используйте %s/%s для телепортации между этажами базы",
+  "block.spectrum.televator": "Televator",
+  "tip.spectrum.thoroughfabric": "При ходьбе по %s оно постепенно изнашивается, превращаясь сначала в %s, затем в %s",
+  "block.spectrum.grass": "Grass",
+  "block.spectrum.dirt_path": "Dirt Path",
+  "block.spectrum.cobblestone_slab": "Cobblestone Slab",
+  "tip.spectrum.ping": "Используйте %s, чтобы указать местоположение другим игрокам поблизости"
 }
