refactor(spectrum): generate translations zip into its directory instead of using releases

--- a/translations/assets/spectrum/lang/en_us.json
+++ b/translations/assets/spectrum/lang/en_us.json
@@ -16,7 +16,7 @@
   "tip.spectrum.disable_spawners.torches": "Torches",
   "tip.spectrum.sponge_absorption_radius": "A %s has a bigger absorption radius when next to another one",
   "block.spectrum.sponge": "Sponge",
-  "tip.spectrum.bottle_your_xp": "Use a %s while holding %s to bottle your XP at 90% efficiency",
+  "tip.spectrum.bottle_your_xp": "Use a %s while holding %s to bottle your XP at 90%% efficiency",
   "item.spectrum.glass_bottle": "Glass Bottle",
   "tip.spectrum.crying_obsidian_portal": "%s is also a valid block for building a nether portal",
   "block.spectrum.crying_obsidian": "Crying Obsidian",
