--- a/translations/assets/spectrum/lang/et_ee.json
+++ b/translations/assets/spectrum/lang/et_ee.json
@@ -16,7 +16,7 @@
   "tip.spectrum.disable_spawners.torches": "Torches",
   "tip.spectrum.sponge_absorption_radius": "A %s has a bigger absorption radius when next to another one",
   "block.spectrum.sponge": "Sponge",
-  "tip.spectrum.bottle_your_xp": "Kasuta %s, hoides samal ajal %s, et pudelisse talletada oma XP 90% efektiivsusega",
+  "tip.spectrum.bottle_your_xp": "Kasuta %s, hoides samal ajal %s, et pudelisse talletada oma XP 90%% efektiivsusega",
   "item.spectrum.glass_bottle": "Glass Bottle",
   "tip.spectrum.crying_obsidian_portal": "%s on samuti sobiv plokk Netheri portaaliks ehitamiseks",
   "block.spectrum.crying_obsidian": "Crying Obsidian",
